--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<h1>Oxid15's personal site </h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Ilia Moiseev personal site</title>
+        <link rel="stylesheet" href="css/styles.css" type="text/css">
+    </head>
+    <body> 
+        <header class="header">
+            <nav>
+                <ul class="top-menu">
+                    <li><a href="https://github.com/Oxid15/">Projects</a></li>
+                    <li><a href="https://github.com/Oxid15/">Contacs</a></li>
+                    <li><a href="https://github.com/Oxid15/">About</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="title_container">
+            <h1 class="title">Ilia Moiseev's personal site</h1>
+            <h3 class="subtitle">Under development right now!</h2>
+        </div>
+
+        <div class="main-content">
+            <p>All links on the page would redirect to my GitHub profile until I finish all site pages. I apologize for inconviniences!</p>
+        </div>
+    </body>
+</html>
