--- a/index.html
+++ b/index.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Ilia Moiseev personal site</title>
+        <title>Ilia Moiseev's personal website</title>
         <link rel="stylesheet" href="css/styles.css" type="text/css">
+        <link rel="icon" href="images/icon.png">
     </head>
     <body> 
         <header class="header">
             <nav>
                 <ul class="top-menu">
-                    <li><a href="https://github.com/Oxid15/">Projects</a></li>
-                    <li><a href="https://github.com/Oxid15/">Contacs</a></li>
-                    <li><a href="https://github.com/Oxid15/">About</a></li>
+                    <li><a class="main-link" href="https://oxid15.github.io/">Main page</a></li>
+                    <li><a href="https://oxid15.github.io/projects/">Projects</a></li>
+                    <li><a href="https://oxid15.github.io/about/">About</a></li>
                 </ul>
             </nav>
         </header>
 
         <div class="title_container">
-            <h1 class="title">Ilia Moiseev's personal site</h1>
-            <h3 class="subtitle">Under development right now!</h2>
+            <h1 class="title">Ilia Moiseev's personal website</h1>
+        </div>
+        
+        <div class="text-container">
+            <p>
+                Hi there, this is my personal website! My name is Ilia Moiseev (Илья Моисеев). I'm computer engineering student at South Ural State University right now and I guess until June 2021.
+                <br>
+                My interests include computer vision, data science and other related topics. Here you can find detailed 
+                <a href="https://oxid15.github.io/about/">information about me</a> and see <a href="https://oxid15.github.io/projects/">the description of my projects</a>
+            </p>
         </div>
 
-        <div class="main-content">
-            <p>All links on the page would redirect to my GitHub profile until I finish all site pages. I apologize for inconviniences!</p>
-        </div>
     </body>
 </html>
