--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
                 Hi there, this is my personal website! My name is Ilia Moiseev (Илья Моисеев). I'm computer engineering student at South Ural State University right now and I guess until June 2021.
                 <br>
                 My interests include computer vision, data science and other related topics. Here you can find detailed 
-                <a href="https://oxid15.github.io/about/">information about me</a> and see <a href="https://oxid15.github.io/projects/">the description of my projects</a>
+                <a href="https://oxid15.github.io/about.html">information about me</a> and see <a href="https://oxid15.github.io/projects.html">the description of my projects</a>
             </p>
         </div>
-
     </body>
 </html>
