--- a/about.html
+++ b/about.html
@@ -10,8 +10,8 @@
             <nav>
                 <ul class="top-menu">
                     <li><a class="main-link" href="https://oxid15.github.io/">Main page</a></li>
-                    <li><a href="https://oxid15.github.io/projects/">Projects</a></li>
-                    <li><a href="https://oxid15.github.io/about/">About</a></li>
+                    <li><a href="https://oxid15.github.io/projects.html">Projects</a></li>
+                    <li><a href="https://oxid15.github.io/about.html">About</a></li>
                 </ul>
             </nav>
         </header>
