typo fixed in projects.html

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
         </div>
         <div class="text-container">
             <p>
-               I will place my projects and their detailed descriptions here. While I developing this page you can see 
+               I will place my projects and their detailed descriptions here. While I am developing this page you can see 
                my projects in <a href="https://github.com/Oxid15/">my GitHub page</a>.
             </p>
         </div>
