--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                 <br>
                 Mathematical logic course from The National Open University "INTUIT" (2019) | <a href="https://www.intuit.ru/verifydiplomas/101220726">Certificate</a>
                 <br>
+                Python programming course from stepik.org (2018) | <a href="https://stepik.org/cert/153563">Certificate</a>
+                <br>
             </p>
             <h3>My languages</h3>
             <p>
@@ -144,7 +146,7 @@
         <div class="text-container">
             <nav>
                 <ul class="list">
-                    <li>E-mail me: <a href="mailto:villeman.5@yandex.ru">villeman.5@yandex.ru</a></li>
+                    <li>E-mail: <a href="mailto:ilia.moiseev.5@yandex.ru">ilia.moiseev.5@yandex.ru</a></li>
                     <li>My <a href="https://github.com/Oxid15">GitHub</a> page</li>
                     <li>My <a href="https://www.linkedin.com/in/ilia-moiseev/">LinkedIn</a> page</li>
                     <li>My <a href="https://www.behance.net/oxid15">Behance</a> page</li>
