--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                 I've written a lot of Python code in the last year (2019). It was DS projects and a lot of
                 CV tasks.
                 You can find examples in the <a href="#projects">project list</a> below. 
-                I have experience in using numpy, OpenCV, Keras, pandas and other popular frameworks.
+                I have experience in using numpy, OpenCV, Keras, pandas and other popular frameworks. 
+                I can also write <span class="emp-text">SQL</span> queries on basic level.
                 Now I'm trying to learn <span class="emp-text">R</span> to use it in
                 my projects. 
                 <br>
