3DiVi school certificate and phone number added
some other minor text corrections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 my projects</a> and find out how to <a href="#contacts">contact me or see my other profiles</a>.
             </p>
         </div>
-        <div class="title-container">
+
+        <div class="title-container-w-margin">
             <h1 class="title" id="about">About me</h1>
         </div>
         <div class="text-container">
@@ -34,56 +35,47 @@
             <p>
                 Bachelor degree in the field of computer engineering in the 
                 <a href="https://comp.susu.ru/" > Department of Electronic Computing Machines </a>
-                of <a href="https://www.susu.ru/en">South Ural State University</a>  (2017-2021).
+                of <a href="https://www.susu.ru/en">South Ural State University</a>  (2017-2021)
                 <br>
                 Mathematical logic course from The National Open University "INTUIT" (2019) | <a href="https://www.intuit.ru/verifydiplomas/101220726">Certificate</a>
                 <br>
                 Python programming course from stepik.org (2018) | <a href="https://stepik.org/cert/153563">Certificate</a>
                 <br>
+                Computer vision school of <a href="http://3divi.com/ru/career/studentam">3DiVi</a> Inc (2020) | <a href="images/certificates/3divi certificate.JPG">Certificate</a>
             </p>
             <h3>My languages</h3>
             <p>
                 <span class="emp-text">Russian</span> is my native language. I speak 
                 <span class="emp-text">English</span> quite good, can understand 
-                everything spoken or written in English. Actually most of the books I'm reading now
-                are in English (it is technical, mathematical and fiction literature.) I have 
-                <span class="emp-text">FCE certificate</span>
-                with score 177, which means that I have level B2 (I could got C1 if it would be 180). 
-                I've got it after FCE exam in December 2019.
-            </p>
-            <p>
-                I'm interested in different languages. I've studied <span class="emp-text">German</span> 
-                when I was in school and
-                continue to study it now by myself. I can read a little and write something simple.
+                everything spoken or written in English. I've got <span class="emp-text">FCE certificate</span>
+                with score 177 in December 2019, which means that I have level B2 (I could got C1 if it would be 180).
             </p>
             <h3>My interests</h3>
             <p>
                 My interests include computer vision, data science and other related topics like
                 applied mathematics and statistics. The most of my
                 projects and publications are in these fields. I'm also interested in art, history and politics.
-                And how we can address social, political and business problems using data.
+                And how we can address social, political and business problems using data.<br>
+                <span class="emp-text">I'm looking for projects to participate in. If you have something interesting,
+                    please <a href="#contacts">contact me</a>.
+                </span>
             </p>
             <h3>My programming experience</h3>
             <p>
-                If we talk about programming languages, I know <span class="emp-text">C++</span> pretty well. 
-                I cannot say that I know it on
-                professional level, but I know it's low-level theory really well (like pointers and memory
-                management), can use templates. I also know
+                If we talk about programming languages, I know <span class="emp-text">C++</span> quite well. 
+                I also know
                 <span class="emp-text">C#</span> and <span class="emp-text">Python</span>.
-                I've written a lot of Python code in the last year (2019). It was DS projects and a lot of
-                CV tasks.
-                You can find examples in the <a href="#projects">project list</a> below. 
+                I've written a lot of Python code last year for computer vision tasks.
                 I have experience in using numpy, OpenCV, Keras, pandas and other popular frameworks. 
                 I can also write <span class="emp-text">SQL</span> queries on basic level.
-                Now I'm trying to learn <span class="emp-text">R</span> to use it in
-                my projects. 
+                Now I'm <span class="emp-text">trying to learn R</span> to use it in my projects. 
                 <br>
                 Can't say that it's essential list of the languages that I've used in my practice,
                 but these are the ones I'm most confident about.
             </p>
         </div>
 
-        <div class="title-container">
+        <div class="title-container-w-margin">
             <h1 class="title" id="projects">My projects</h1>
         </div>
         <div class="text-container">
@@ -134,25 +126,29 @@
             <h5>Low-level ML C++ project - neural net from scratch | <a href="https://github.com/Oxid15/Perceptron">
                 source code</a></h5>
             <p>
-                This is my <span class="emp-text">first and biggest </span>C++ project by this time. I was doing it initially as my course project in university,
+                This is hitherto my <span class="emp-text">first and biggest </span>C++ project. I was doing it initially as my course project in university,
                 but then it continued to grow and became as it is now. Repository contains source code for creating and using 
                 multilayer neural networks. I also started to develop evolutional algorithm that would help finding best network
-                architecture. It is still under developement. I tested networks that you could make with my code on classical
-                <span class="emp-text">"XOR" problem</span> and they converge as they should.
+                architecture. It is still under developement. I've tested networks that you could make with my code on classical
+                <span class="emp-text">"XOR" problem</span> and they successfully converge on it as they should.
             </p>
         </div>
-        <div class="title-container">
+
+        <div class="title-container-w-margin">
             <h1 class="bottom-title" id="contacts">Contact me</h1>
         </div>
         <div class="text-container">
             <nav>
                 <ul class="list">
-                    <li>E-mail: <a href="mailto:ilia.moiseev.5@yandex.ru">ilia.moiseev.5@yandex.ru</a></li>
-                    <li>My <a href="https://github.com/Oxid15">GitHub</a> page</li>
-                    <li>My <a href="https://www.linkedin.com/in/ilia-moiseev/">LinkedIn</a> page</li>
-                    <li>My <a href="https://www.behance.net/oxid15">Behance</a> page</li>
+                    <li>+7-968-115-87-00</li>
+                    <li><a href="mailto:ilia.moiseev.5@yandex.ru">ilia.moiseev.5@yandex.ru</a></li>
+                    <li><a href="https://github.com/Oxid15">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/ilia-moiseev/">LinkedIn</a></li>
+                    <li><a href="https://www.behance.net/oxid15">Behance</a></li>
                 </ul>
             </nav>
         </div>
+        <img class="small_logo" src="./images/icon.png">
+
     </body>
 </html>
