Posts section and new logo added

--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
     <head>
         <title>Ilia Moiseev's personal website</title>
         <link rel="stylesheet" href="css/styles.css" type="text/css">
-        <link rel="icon" href="images/icon.png">
+        <link rel="icon" href="images/icon_small.png">
     </head>
     <body> 
+        <a href="https://oxid15.github.io/">
+            <img class="index_logo" src="./images/square_dark.png">
+        </a>
         <nav>
             <ul class="top-menu">
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
+                <li><a href="https://oxid15.github.io/posts.html">Posts</a></li>
             </ul>
         </nav>
+        <div style="clear: both;"></div>
+
         <div class="main-title-container">
             <h1 class="main-title" id="title">Hi there, <br> I'm <span class="emp-text">Ilia Moiseev</span></h1>
         </div>
