More elegant version of headers

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="title" id="about">About me</h1>
         </div>
         <div class="text-container">
-            <h3>My education</h3>
+            <h3>Education</h3>
             <p>
                 Bachelor degree in the field of computer engineering in the 
                 <a href="https://comp.susu.ru/" > Department of Electronic Computing Machines </a>
@@ -49,14 +49,14 @@
                 <br>
                 Computer vision school of <a href="http://3divi.com/ru/career/studentam">3DiVi</a> Inc (2020) | <a href="images/certificates/3divi certificate.JPG">Certificate</a>
             </p>
-            <h3>My languages</h3>
+            <h3>Languages</h3>
             <p>
                 <span class="emp-text">Russian</span> is my native language. I speak 
                 <span class="emp-text">English</span> quite good, can understand 
                 everything spoken or written in English. I've got <span class="emp-text">FCE certificate</span>
                 with score 177 in December 2019, which means that I have level B2 (I could got C1 if it would be 180).
             </p>
-            <h3>My interests</h3>
+            <h3>Interests</h3>
             <p>
                 My interests include computer vision, data science and other related topics like
                 applied mathematics and statistics. The most of my
@@ -66,7 +66,7 @@
                     please <a href="#contacts">contact me</a>.
                 </span>
             </p>
-            <h3>My programming experience</h3>
+            <h3>Programming experience</h3>
             <p>
                 If we talk about programming languages, I know <span class="emp-text">C++</span> quite well. 
                 I also know
@@ -82,7 +82,7 @@
         </div>
 
         <div class="title-container-w-margin">
-            <h1 class="title" id="projects">My projects</h1>
+            <h1 class="title" id="projects">My Projects</h1>
         </div>
         <div class="text-container">
             <h2><span class="emp-text">Image Smoothing Algorithm</span> Based on Gradient Analysis</h2>
