Corrected sentence, code cleanup

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <span class="emp-text">Russian</span> is my native language. I speak 
                 <span class="emp-text">English</span> quite good, can understand 
                 everything spoken or written in English. I've got <span class="emp-text">FCE certificate</span>
-                with score 177 in December 2019, which means that I have level B2 (I could got C1 if it would be 180).
+                with score 177 in December 2019, which means that I have level B2 (It is nearly C1, which is 180).
             </p>
             <h3>Interests</h3>
             <p>
@@ -62,9 +62,6 @@
                 applied mathematics and statistics. The most of my
                 projects and publications are in these fields. I'm also interested in art, history and politics.
                 And how we can address social, political and business problems using data.<br>
-                <span class="emp-text">I'm looking for projects to participate in. If you have something interesting,
-                    please <a href="#contacts">contact me</a>.
-                </span>
             </p>
             <h3>Programming experience</h3>
             <p>
@@ -102,11 +99,13 @@
                 <img class="image" alt="Our results" src="images/index/example.png">
             </p>
             <h2 class="title-w-margin">Death rates <span class="emp-text">data visualization</span> for OurCountryInData</h2>
-            <h5>Data visualization project, Jupyter Notebook | 
+            <h5>
+                Data visualization project, Jupyter Notebook | 
                 <a href="https://ourcountryindata.ru/samye-chastye-prichiny-smerti-v-zavisimosti-ot-vozrasta-i-pola/">
                 publication</a>,
                 <a href="https://github.com/Oxid15/Russian-Death-Rates-Visualization">
-                source code</a></h5>
+                source code</a>
+            </h5>
             <p>
                 <span class="emp-text">What causes death</span> of different age groups? To find it out I've done visualization
                 of death rates using open dataset from OurCountryInData repository. You can view all
@@ -116,8 +115,10 @@
                 <img class="image" alt="Plot example" src="images/index/plot.png" width="800px" height="615px">
             </p>
             <h2 class="title-w-margin"><span class="emp-text">Image processing</span> basics</h2>
-            <h5>C++ and Python algorithms | <a href="https://github.com/Oxid15/ImageProcessing">
-                source code</a></h5>
+            <h5>
+                C++ and Python algorithms | <a href="https://github.com/Oxid15/ImageProcessing">
+                source code</a>
+            </h5>
             <p>
                 In my practice I had to write some image processing algorithms from scratch. Some using Python
                 some using C++. So I decided to post the code to my GitHub page. Repository contains several
@@ -129,8 +130,10 @@
                 <img class="image" alt="Hough transform" src="images/index/hough.png" width="800px" height="530px">
             </p>
             <h2 class="title-w-margin">Multilayer neural net or <span class="emp-text">Perceptron</span></h2>
-            <h5>Low-level ML C++ project - neural net from scratch | <a href="https://github.com/Oxid15/Perceptron">
-                source code</a></h5>
+            <h5>
+                Low-level ML C++ project - neural net from scratch | <a href="https://github.com/Oxid15/Perceptron">
+                source code</a>
+            </h5>
             <p>
                 This is hitherto my <span class="emp-text">first and biggest </span>C++ project. I was doing it initially as my course project in university,
                 but then it continued to grow and became as it is now. Repository contains source code for creating and using 
@@ -155,6 +158,5 @@
             </nav>
         </div>
         <img class="small_logo" src="./images/icon.png">
-
     </body>
 </html>
