--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="text-container">
             <p>
                 and this is my personal website! 
-                I'm computer engineering student at South Ural State University right now and 
-                I guess until June 2021. Here you can find detailed 
+                I'm studying a master's degree in Big Data and Machine Learning at ITMO University.
+                Here you can find detailed 
                 <a href="#about">information about me</a>, see <a href="#projects">the description of 
                 my projects</a> and find out how to <a href="#contacts">contact me or see my other profiles</a>.
             </p>
@@ -39,15 +39,18 @@
         <div class="text-container">
             <h3>Education</h3>
             <p>
+                Master's degree in the field of Big Data and Machine Learning at the 
+                <a href="https://itmo.ru/ru/">ITMO University</a>  (2021-2023)
+                <br><br>
                 Bachelor degree in the field of computer engineering in the 
                 <a href="https://comp.susu.ru/" > Department of Electronic Computing Machines </a>
                 of <a href="https://www.susu.ru/en">South Ural State University</a>  (2017-2021)
-                <br>
-                Mathematical logic course from The National Open University "INTUIT" (2019) | <a href="https://www.intuit.ru/verifydiplomas/101220726">Certificate</a>
-                <br>
-                Python programming course from stepik.org (2018) | <a href="https://stepik.org/cert/153563">Certificate</a>
-                <br>
+                <br><br>
                 Computer vision school of <a href="http://3divi.com/ru/career/studentam">3DiVi</a> Inc (2020) | <a href="images/certificates/3divi certificate.JPG">Certificate</a>
+                <br><br>
+                Mathematical logic course from The National Open University "INTUIT" (2019) | <a href="https://www.intuit.ru/verifydiplomas/101220726">Certificate</a>
+                <br><br>
+                Python programming course from stepik.org (2018) | <a href="https://stepik.org/cert/153563">Certificate</a>
             </p>
             <h3>Languages</h3>
             <p>
@@ -68,10 +71,9 @@
                 If we talk about programming languages, I know <span class="emp-text">C++</span> quite well. 
                 I also know
                 <span class="emp-text">C#</span> and <span class="emp-text">Python</span>.
-                I've written a lot of Python code last year for computer vision tasks.
+                I've written a lot of Python code recently for computer vision tasks.
                 I have experience in using numpy, OpenCV, Keras, pandas and other popular frameworks. 
                 I can also write <span class="emp-text">SQL</span> queries on basic level.
-                Now I'm <span class="emp-text">trying to learn R</span> to use it in my projects. 
                 <br>
                 Can't say that it's essential list of the languages that I've used in my practice,
                 but these are the ones I'm most confident about.
