--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
         <div class="text-container">
             <h3>Education</h3>
             <p>
-                Master's degree in the field of Big Data and Machine Learning at the 
-                <a href="https://itmo.ru/ru/">ITMO University</a>  (2021-2023)
-                <br><br>
+                Master's degree in the field of Big Data and ML at the 
+                <a href="https://itmo.ru/ru/">ITMO University</a> (2021-2023)
+                <br>
                 Bachelor degree in the field of computer engineering in the 
                 <a href="https://comp.susu.ru/" > Department of Electronic Computing Machines </a>
                 of <a href="https://www.susu.ru/en">South Ural State University</a>  (2017-2021)
-                <br><br>
+                <br>
                 Computer vision school of <a href="http://3divi.com/ru/career/studentam">3DiVi</a> Inc (2020) | <a href="images/certificates/3divi certificate.JPG">Certificate</a>
-                <br><br>
+                <br>
                 Mathematical logic course from The National Open University "INTUIT" (2019) | <a href="https://www.intuit.ru/verifydiplomas/101220726">Certificate</a>
-                <br><br>
+                <br>
                 Python programming course from stepik.org (2018) | <a href="https://stepik.org/cert/153563">Certificate</a>
             </p>
             <h3>Languages</h3>
