--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contacts">Contacts</a></li>
-                <li><a class="important-link" href="https://oxid15.github.io/posts.html">Posts</a></li>
+                <li><a href="https://oxid15.github.io/posts.html">Posts</a></li>
+                <li><a class="important-link" href="./resources/Resume-Computer-Vision-Engineer-Ilia-Moiseev-05-09-2021.pdf">Resume</a></li>
             </ul>
         </nav>
         <div style="clear: both;"></div>
