--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Ilia Moiseev's personal website</title>
     <link rel="stylesheet" href="styles.css" media="screen">
     <link rel="icon" href="images/icon_small.png">
-<link rel="stylesheet" href="Home.css" media="screen">
+<link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
     <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i,900|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i">
@@ -34,7 +34,7 @@
     <meta property="og:type" content="website">
   </head>
   <body class="u-body"><header class="u-black u-clearfix u-header u-header" id="sec-ec72"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Home.html" data-page-id="46058780" class="u-image u-logo u-image-1" data-image-width="550" data-image-height="550" title="Home">
+        <a href="index.html" data-page-id="46058780" class="u-image u-logo u-image-1" data-image-width="550" data-image-height="550" title="Home">
           <img src="images/icon1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
@@ -47,16 +47,16 @@
             </a>
           </div>
           <div class="u-custom-menu u-nav-container">
-            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="Home.html" style="padding: 10px 6px 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="Posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
+            <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="index.html" style="padding: 10px 6px 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 6px 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="index.html" style="padding: 10px 6px 10px 20px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
 </li></ul>
               </div>
             </div>
