--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="u-clearfix u-section-3" id="sec-288b">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">My experience</h1>
-        <div class="u-border-3 u-border-grey-dark-1 u-line u-line-vertical u-line-1"></div>
+        <div class="u-border-3 u-border-grey-dark-1 u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xs u-line u-line-vertical u-line-1"></div>
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
@@ -166,7 +166,7 @@ custom format</p>
     <section class="u-black u-clearfix u-section-5" id="sec-3077">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">My education</h1>
-        <div class="u-border-3 u-border-white u-line u-line-vertical u-line-1"></div>
+        <div class="u-border-3 u-border-white u-hidden-md u-hidden-sm u-hidden-xs u-line u-line-vertical u-line-1"></div>
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
@@ -208,7 +208,7 @@ custom format</p>
     <section class="u-black u-clearfix u-section-6" id="carousel_9b23">
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default u-text-1">Courses</h1>
-        <div class="u-border-3 u-border-white u-line u-line-vertical u-line-1"></div>
+        <div class="u-border-3 u-border-white u-hidden-md u-hidden-sm u-hidden-xs u-line u-line-vertical u-line-1"></div>
         <div class="u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
