--- a/posts.html
+++ b/posts.html
@@ -58,12 +58,12 @@
         </nav>
       </div></header>
     <section class="u-black u-clearfix u-section-1" id="sec-d960">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
         <div class="u-blog u-expanded-width u-blog-1">
           <div class="u-repeater u-repeater-1"><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img class="u-image u-image-default u-image-1" src="images/motion.png" alt="" data-image-width="920" data-image-height="336">
+                <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/motion.png" alt="" data-image-width="920" data-image-height="336">
                 <h1 class="u-text u-text-1">
                   <a href="https://oxid15.github.io/posts/the-task-of-face-liveness-detection.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1">The task of face liveness detection</a>
                 </h1>
@@ -77,12 +77,12 @@
       </div>
     </section>
     <section class="u-black u-clearfix u-section-2" id="carousel_948c">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1"><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-valign-middle-xs u-sheet-1">
         <div class="u-blog u-expanded-width u-blog-1">
           <div class="u-repeater u-repeater-1"><!--blog_post-->
             <div class="u-blog-post u-container-style u-repeater-item u-white u-repeater-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img class="u-image u-image-default u-image-1" src="images/ara.bmp53.png" alt="" data-image-width="974" data-image-height="602">
+                <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/ara.bmp53.png" alt="" data-image-width="974" data-image-height="602">
                 <h1 class="u-text u-text-1">
                   <a href="https://oxid15.github.io/posts/the-task-of-face-liveness-detection.html" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-black u-btn-1"> Review of image smoothing algorithms</a>
                 </h1>
