--- a/Blogposts/Review-of-Img-Smooth-Algos.html
+++ b/Blogposts/Review-of-Img-Smooth-Algos.html
@@ -53,7 +53,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="../index.html" style="padding: 10px 6px 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="../Posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-white u-text-custom-color-2 u-text-hover-white" href="../posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -61,7 +61,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../index.html" style="padding: 10px 6px 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../Posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="../posts.html" style="padding: 10px 6px 10px 20px;">Posts</a>
 </li></ul>
               </div>
             </div>
